--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite  --mode development",
+    "build": "tsc && vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
+    "animate.css": "^4.1.1",
     "antd": "^5.1.7",
+    "axios": "^1.3.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
