✨ feat: 完成权限路由的配置

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 VITE_APP_ENV=development
 VITE_APP_DEBUG=true
-VITE_APP_BASE_URL=https://127.0.0.1:8011
-VITE_APP_BASE_URL_PROXY=https://127.0.0.1:8011
+VITE_APP_BASE_URL=http://127.0.0.1:8011
+VITE_APP_BASE_URL_PROXY=http://127.0.0.1:8011
