--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "animate.css": "^4.1.1",
     "antd": "^5.1.7",
     "axios": "^1.3.2",
+    "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.2",
     "reset-css": "^5.0.1",
     "sass": "^1.58.0"
   },
@@ -26,6 +33,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/redux-promise": "^0.5.29",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
